# recall

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
src/: app.rs  cli.rs  clipboard.rs  config.rs  discovery.rs  main.rs  search.rs  ui.rs
