[package]
name = "recall-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A searchable TUI for your shell aliases and functions"
license = "MIT"
repository = "https://github.com/micovi/recall"
homepage = "https://recall.sh"
keywords = ["cli", "tui", "shell", "aliases", "cheatsheet"]
categories = ["command-line-utilities"]

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
module_name_repetitions = "allow"
similar_names = "allow"

[profile.release]
strip = true
lto = true
